<resources>
    <string name="app_name">SvSplitSmart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_groups">Groups</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_activity">Activity</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here!</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="upload_image">Upload Image</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="name">Name</string>
    <string name="logout">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
</resources>