<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <!-- Edit Button -->
    <ImageButton
        android:id="@+id/edit_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end|top"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/baseline_edit_24"
        android:contentDescription="@string/edit_profile"
        android:background="?android:attr/selectableItemBackground" />

    <!-- Profile Image -->

    <!-- User Name -->
    <ImageView
        android:id="@+id/nav_header_image"
        android:layout_width="127dp"
        android:layout_height="99dp"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="16dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/nav_header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:paddingTop="8dp"/>

    <!-- User Email -->
    <TextView
        android:id="@+id/nav_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:paddingTop="4dp"/>

    <!-- User Contact -->
    <TextView
        android:id="@+id/nav_header_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:paddingTop="4dp"/>
</LinearLayout>
